app/assets/stylesheets/pages/pipelines.scss
/* ... */
/**
 * Terminal
 */
.terminal-icon {
  margin-left: 3px;
}

.terminal-container {
  .content-block {
    border-bottom: none;
  }

  #terminal {
    margin-top: 10px;
    min-height: 450px;
    box-sizing: border-box;

    > div {
      min-height: 450px;
    }
  }
}

/**
 * Play button with icon in dropdowns
 */
.ci-table .no-btn {
  border: none;
  background: none;
  outline: none;
  width: 100%;
  text-align: left;

  .icon-play {
    position: relative;
    top: 2px;
    margin-right: 5px;
    height: 13px;
    width: 12px;
  }
}

/**
 * Cross-project pipelines (applied conditionally to pipeline graph)
 */

.has-linked-pipelines.stage-column-list {
  display: inline-block;
}

.linked-pipelines-column.stage-column {
  position: relative;

  & > ul {
    padding: 0;
  }

  &.graph-position-left {
    margin-right: 36px;

    .cross-project-triangle {
      right: -42px;
    }
  }

  &.graph-position-right {
    margin-left: 36px;

    .cross-project-triangle {
      left: -54px;
    }
  }

  .linked-pipeline.build {
    height: 40px;

    // apply custom dimensions to connector before and after for triangle arrow
    &.flat-connector-before {
      @include flat-connector-before($linked-project-column-margin);
    }

    &::after {
      right: -$linked-project-column-margin;
      width: $linked-project-column-margin;
    }

    .linked-pipeline-content {
      @include build-content(0);
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
}

.stage-column.has-upstream {
  margin-left: 60px;

  .left-connector {
    @include flat-connector-before(60px)
  }

  &.has-only-one-job {
    margin-left: 30px;
    margin-right: 0;

    .left-connector {
      @include flat-connector-before;
    }
  }
}

.stage-column.has-downstream {
  margin-right: $linked-project-column-margin;

  &.has-only-one-job:not(:first-child) {
    margin-right: 44px;
    margin-left: 0;

    .left-connector {
      @include flat-connector-before;
    }
  }

  .build {
    &:first-child {
      &::after {
        right: -$linked-project-column-margin;
        width: $linked-project-column-margin;
      }
    }
  }
}

.cross-project-triangle {
  position: absolute;
  top: 48px;
  width: 0;
  height: 0;
  border-bottom: 7px solid transparent;
  border-top: 7px solid transparent;
  border-left: 7px solid $gray-darkest;
  font-size: 0;
  line-height: 0;
  z-index: 10;
}

.project-name-pipeline-id-separator {
  display: inline-block;
  margin: 4px 2px 0 2px;
  font-size: 10px;
  vertical-align: top;
}

